# GasSimulation

./: .gitignore  README.md  config.py  main.py  pyproject.toml
docs/: advanced.md  correlation.md  ergodic.md  graphs.md  implementation.md  mathematics.md  parameters.md  physics.md  second_law.md
graphs/: __init__.py  advanced.py  boltzmann.py  brownian.py  correlation.py  distribution.py  energy_conservation.py  entropy.py  ergodic.py  graph_window.py  kinetic.py  phase.py  realtime.py  rotational.py  statistical.py  thermodynamic.py
models/: __init__.py  particle.py
schemas/: __init__.py  base.py  colors.py  graphs.py  particles.py  physics.py  simulation.py  ui.py
simulation/: __init__.py  widget.py
ui/: __init__.py  config_window.py  main_window.py
